EKS/amazon-app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: amazon-app-deployment
  namespace: amazon
  labels:
    app: amazon
    auther: Tawfeeq
spec:
  replicas: 2
  strategy:
    tyep: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: amazon-app
  template:
    metadata:
      labels:
        app: amazon-app
    spec:
      containers:
        - name: amazon
          image: tawfeeq421/amazon
          ports:
            - name: app-port
              containerPort: 80
          resources:
            requests:
              cpu: 150m
              memory: 120Mi
            limits:
              cpu: 250m
              memory: 240Mi
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 5
