EKS/amazon-app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: amazon-app-service
  namespace: amazon
  labels:
    auther: Tawfeeq
spec:
  type: ClusterIP
  ports:
    - targetPort: app-port
      port: 80
      protocol: TCP
  selector:
    app: amazon-app
